@@ -1,20 +1,21 @@
 package pl.kurs.test4shapes.validators;
 
-import pl.kurs.test4shapes.model.Shape;
-import pl.kurs.test4shapes.model.ShapeType;
 
 import javax.validation.ConstraintValidator;
 import javax.validation.ConstraintValidatorContext;
 import java.util.Arrays;
+import java.util.List;
 
-public class InvalidTypeValidator implements ConstraintValidator<InvalidType, ShapeType> {
+
+public class InvalidTypeValidator implements ConstraintValidator<InvalidType, String> {
 
     @Override
     public void initialize(InvalidType constraintAnnotation) {
     }
 
     @Override
-    public boolean isValid(ShapeType type, ConstraintValidatorContext constraintValidatorContext) {
-        return type == null || Arrays.asList(ShapeType.values()).contains(type);
+    public boolean isValid(String type, ConstraintValidatorContext constraintValidatorContext) {
+        List<String> shapeTypes = List.of("CIRCLE", "RECTANGLE", "SQUARE");
+        return shapeTypes.contains(type);
     }
 }
